# SmartReceipt

./: .gitignore  Makefile  ProjectDescription.md  README.md  docker-compose.gpu.yml  docker-compose.yml
.github/workflows/: backend-ci.yaml  ci.yaml
ai-module/: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  ModelContainer  README.md  main.py  pyproject.toml  requirements.txt  run_test_models.py
ai-module/app/: main.py
ai-module/app/ai-research/: ocr.py
ai-module/app/api/endpoints/: receipt.py
ai-module/app/api/v1/endpoints/: ocr.py
ai-module/app/config/: settings.py
ai-module/app/core/: config.py  engine.py
ai-module/app/nlp/: categorizer.py  config.py
ai-module/app/nlp/models/my-receipt-categorizer/: README.md  config_setfit.json  model_head.pkl  tokenizer_config.json
ai-module/app/ocr/: LocalLlmReceiptParser.py  cleaning.py  donut_parser.py  image_preprocessor.py  llm_parser.py  receipt_detector.py
ai-module/app/schemas/: error.py  ocr.py  receipt.py
ai-module/app/services/: inference_service.py  interfaces.py
ai-module/app/utils/: logger.py  noop_visualizer.py  visualizer.py  visualizer.py.bak
ai-module/data/set_fit_few_shot/: dataset.json
ai-module/scripts/: evaluate_model.py  train_categorizer.py  train_receipt_detector.py
ai-module/src/apis/: ocr_module_api.py  ocr_module_api_base.py
ai-module/src/models/: error_response.py  ocr_result.py
ai-module/src/nlp/: categorizer.py
ai-module/src/ocr/: donut_parser.py  image_preprocessor.py  receipt_detector.py  receipt_parser.py  text_extractor.py
ai-module/src/utils/: visualizer.py
ai-module/tests/: conftest.py  run_test_models.py  test_categorizer.py  test_inference.py  test_ocr_pipeline.py
backend/: Dockerfile  README.md  build.gradle  settings.gradle
docs/: Dokumentacja-Wstępna-Projektu.docx  openapi.yaml
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/api-client/: api.ts  axiosInstance.ts  base.ts  (+5 more)
(+169 files in other folders)
