[project]
name = "ai-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "paddleocr",
    "paddlepaddle-gpu>=2.6.2",
    "protobuf>=3.20.2",
    "pytesseract>=0.3.13",
    "python-doctr[torch]>=1.0.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "setfit>=1.1.3",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "ultralytics>=8.3.230",
]

[tool.uv.sources]
paddleocr = { git = "https://github.com/PaddlePaddle/PaddleOCR.git" }
