[project]
name = "ai-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.123.0",
    "huggingface-hub>=0.36.0",
    "llama-cpp-python>=0.3.16",
    "numpy<2.0.0", # ZMIANA: Paddle wymaga NumPy 1.x
    "opencv-python-headless>=4.10.0.84", # ZMIANA: Wersja z PyPI zamiast Gita
    "paddleocr==2.7.0.2",
    "paddlepaddle-gpu==2.6.1", # ZMIANA: Sztywna wersja, która na pewno działa
    "protobuf>=3.20.2,<4.0.0", # DODATEK: Częsty wymóg dla Paddle
    "pydantic>=2.9.0",
    "pytesseract>=0.3.13",
    "python-doctr[torch]>=0.9.0",
    "python-multipart>=0.0.12",
    "rich>=14.2.0",
    "ruff>=0.14.9",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "sentencepiece>=0.2.0",
    "setfit>=1.1.0",
    "setuptools>=80.9.0",
    "torch>=2.4.0", # ZMIANA: Poprawa nieistniejącej wersji 2.9.1
    "transformers>=4.44.0",
    "ultralytics>=8.3.0",
    "uvicorn>=0.30.0",
]

# USUŃ sekcję [tool.uv.sources] dla paddleocr, 
# chyba że absolutnie potrzebujesz wersji developerskiej.
# Stabilna wersja z PyPI (2.9.1) jest bezpieczniejsza.